--- a/SwiftyTable/Base.lproj/Main.storyboard
+++ b/SwiftyTable/Base.lproj/Main.storyboard
@@ -56,6 +56,46 @@
                                     <outlet property="priceLabel" destination="otP-Vy-ca0" id="XSs-gV-7HT"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RottenAppleTableViewCell" id="6ee-LL-ETr" customClass="RottenAppleTableViewCell" customModule="SwiftyTable" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="136" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6ee-LL-ETr" id="AxD-0V-8FW">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GYd-oG-kre">
+                                            <rect key="frame" x="18" y="11" width="154" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="Ze3-V0-idz"/>
+                                                <constraint firstAttribute="width" constant="154" id="duc-fD-R4p"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remove Now" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fox-yp-OHA">
+                                            <rect key="frame" x="403" y="11" width="120" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="Rs6-db-Muw"/>
+                                                <constraint firstAttribute="width" constant="120" id="gMX-hn-SCm"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="GYd-oG-kre" firstAttribute="centerY" secondItem="AxD-0V-8FW" secondAttribute="centerY" id="7q6-f2-Pbe"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="fox-yp-OHA" secondAttribute="trailing" constant="69" id="SYI-c1-CN2"/>
+                                        <constraint firstItem="fox-yp-OHA" firstAttribute="centerY" secondItem="AxD-0V-8FW" secondAttribute="centerY" id="wQX-ZN-xPw"/>
+                                        <constraint firstItem="GYd-oG-kre" firstAttribute="leading" secondItem="AxD-0V-8FW" secondAttribute="leadingMargin" constant="10" id="xVn-mb-L2K"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.75686274509999996" green="0.81176470590000005" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="mainLabel" destination="GYd-oG-kre" id="ceA-MT-hIz"/>
+                                </connections>
+                            </tableViewCell>
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="cQh-Ku-vH6" id="M7x-O5-CMy"/>
